--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   carousel_slider: ^4.2.1
+  provider: ^6.0.5
+  http: ^1.1.0
+  logger: ^2.0.1
 
 dev_dependencies:
   flutter_test:
