--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   http: ^1.1.0
   logger: ^2.0.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
