--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^1.1.0
   logger: ^2.0.1
   cached_network_image: ^3.2.3
+  cloud_firestore: ^4.8.5
+  firebase_core: ^2.15.1
 
 dev_dependencies:
   flutter_test:
